Dummy_Package_for_scratch_org/main/default/objects/Selenium_Group_Variable__c/Selenium_Group_Variable__c.object-meta.xml
<CustomObject>
    <label>Selenium Group Variable</label>
    <nameField>
        <label>Selenium Group Variable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selenium Group Variables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>