Dummy_Package_for_scratch_org/main/default/objects/Selenium_Group_Variable__c/fields/Display_Value__c.field-meta.xml
<CustomField>
    <fullName>Display_Value__c</fullName>
    <formula>if( Hide_Value__c, &quot;*****&quot;, Value__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Value</label>
    <type>Text</type>
</CustomField>