Dummy_Package_for_scratch_org/main/default/objects/Selenium_Group_Variable__c/fields/Hide_Value__c.field-meta.xml
<CustomField>
    <fullName>Hide_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this Checkbox to hide the value in the Test Group related list.</inlineHelpText>
    <label>Hide Value</label>
    <type>Checkbox</type>
</CustomField>