Dummy_Package_for_scratch_org/main/default/objects/Selenium_Group_Variable__c/fields/Selenium_Test_Group__c.field-meta.xml
<CustomField>
    <fullName>Selenium_Test_Group__c</fullName>
    <label>Selenium Test Group</label>
    <referenceTo>Selenium_Test_Group__c</referenceTo>
    <relationshipLabel>Selenium Group Variables</relationshipLabel>
    <relationshipName>Selenium_Group_Variables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>